# oebb-monitor-cli

./: CLAUDE.md  Cargo.toml  README.md  install.sh  run-debug.sh  stations.json  uninstall.sh
.github/workflows/: release.yml
Formula/: oebb-monitor.rb
src/: app.rs  config.rs  debug.rs  lang.rs  main.rs  model.rs  ui.rs  ws.rs
