[package]
name = "oebb-monitor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oebb-monitor"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
chrono = "0.4"
anyhow = "1.0"
lazy_static = "1.4"
