[package]
name = "oebb-monitor"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "oebb-monitor"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
chrono = "0.4"
anyhow = "1.0"
